--- a/batch normalization.ipynb
+++ b/batch normalization.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shin/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "# 파이썬 2와 파이썬 3 지원\n",
     "from __future__ import division, print_function, unicode_literals\n",
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -290,34 +299,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 배치 데이터 정확도: 0.71 검증 세트 정확도: 0.5964\n",
-      "1 배치 데이터 정확도: 0.77 검증 세트 정확도: 0.6432\n",
-      "2 배치 데이터 정확도: 0.77 검증 세트 정확도: 0.6738\n",
-      "3 배치 데이터 정확도: 0.77 검증 세트 정확도: 0.6968\n",
-      "4 배치 데이터 정확도: 0.89 검증 세트 정확도: 0.6984\n",
-      "5 배치 데이터 정확도: 0.81 검증 세트 정확도: 0.7078\n",
-      "6 배치 데이터 정확도: 0.9 검증 세트 정확도: 0.7076\n",
-      "7 배치 데이터 정확도: 0.9 검증 세트 정확도: 0.7114\n",
-      "8 배치 데이터 정확도: 0.91 검증 세트 정확도: 0.7146\n",
-      "9 배치 데이터 정확도: 0.98 검증 세트 정확도: 0.7124\n",
-      "10 배치 데이터 정확도: 0.97 검증 세트 정확도: 0.7128\n",
-      "11 배치 데이터 정확도: 0.92 검증 세트 정확도: 0.7146\n",
-      "12 배치 데이터 정확도: 0.97 검증 세트 정확도: 0.7154\n",
-      "13 배치 데이터 정확도: 0.96 검증 세트 정확도: 0.7238\n",
-      "14 배치 데이터 정확도: 0.93 검증 세트 정확도: 0.721\n",
-      "15 배치 데이터 정확도: 1.0 검증 세트 정확도: 0.7186\n",
-      "16 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.7216\n",
-      "17 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.7122\n",
-      "18 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.7182\n",
-      "19 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.7082\n",
-      "테스트 세트에서 최종 정확도: 0.7166\n"
+      "0 배치 데이터 정확도: 0.7 검증 세트 정확도: 0.6046\n",
+      "1 배치 데이터 정확도: 0.77 검증 세트 정확도: 0.643\n",
+      "2 배치 데이터 정확도: 0.79 검증 세트 정확도: 0.6712\n",
+      "3 배치 데이터 정확도: 0.81 검증 세트 정확도: 0.6966\n",
+      "4 배치 데이터 정확도: 0.88 검증 세트 정확도: 0.6986\n",
+      "5 배치 데이터 정확도: 0.82 검증 세트 정확도: 0.7002\n",
+      "6 배치 데이터 정확도: 0.9 검증 세트 정확도: 0.7134\n",
+      "7 배치 데이터 정확도: 0.89 검증 세트 정확도: 0.7164\n",
+      "8 배치 데이터 정확도: 0.86 검증 세트 정확도: 0.7172\n",
+      "9 배치 데이터 정확도: 0.95 검증 세트 정확도: 0.7094\n",
+      "10 배치 데이터 정확도: 0.96 검증 세트 정확도: 0.7124\n",
+      "11 배치 데이터 정확도: 0.97 검증 세트 정확도: 0.7106\n",
+      "12 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.71\n",
+      "13 배치 데이터 정확도: 0.97 검증 세트 정확도: 0.7126\n",
+      "14 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.714\n",
+      "15 배치 데이터 정확도: 1.0 검증 세트 정확도: 0.7122\n",
+      "16 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.7174\n",
+      "17 배치 데이터 정확도: 0.95 검증 세트 정확도: 0.7042\n",
+      "18 배치 데이터 정확도: 0.99 검증 세트 정확도: 0.704\n",
+      "19 배치 데이터 정확도: 1.0 검증 세트 정확도: 0.7184\n",
+      "테스트 세트에서 최종 정확도: 0.7188\n"
      ]
     }
    ],
@@ -351,6 +360,13 @@
     "    \n",
     "    file_writer.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
